# lucid_lite

./: .gitignore  README.md  claude_visualizer.ipynb  geometry.py  labels_parser.py  luc3d_tracker.ipynb  luc3d_tracker_helper.py  lucid-lite.md  pyproject.toml  temp.md  testing.ipynb  tracking_audit.md
gui_source/: README.md  analysis_h5_reader.py  assignment_panel.py  calibration.py  colors.py  comms.py  graph_window.py  labels.py  lucid_labels.py  main.py  main_window.py  new_identity_dialog.py  overlay_renderer.py  playback_controls.py  pose_data.py  session_loader.py  slp_reader.py  timeline_widget.py  track_dialog.py  triangulation_3d_window.py  video_decoder.py  video_panel.py  view_strip.py
josh_source/: epipolar.py  geometry.py  geometry_old.py  graphs.py  multiview_labels.py  track_push.py  tracker.py  tracker_claude.py  tracker_claude_old.py  tracker_old.py  visualizer.py
notebooks/: benchmarker.ipynb  benchmarker_claude.ipynb  comparisons.ipynb  epipole_visualizer.ipynb  josh_lucid_lite_metrics.csv  luc3d_tracker.ipynb  mac_main.ipynb  per_camera_session_metrics.csv  tracking_test.ipynb  vast_main.ipynb
prompts/: prompts.md
prompts/plans/: gui-notebook-comms.md
