[project]
name = "lucid-lite"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "av>=17.0.1",
    "h5py>=3.10",
    "ipykernel>=6.0",
    "jupyter-console>=6.6.3",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyside6>=6.11.0",
    "scipy>=1.17.1",
    "sleap-io>=0.6.5",
]
