[project]
name = "lucid-lite"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "av>=17.0.1",
    "h5py>=3.10",
    "ipykernel>=6.0",
    "jupyter-console>=6.6.3",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "motmetrics>=1.4.0",
    "numpy>=2.4.4",
    "pandas>=2.0",
    "opencv-python>=4.13.0.92",
    "pyside6>=6.11.0",
    "scipy>=1.17.1",
    "sleap-io>=0.6.5",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]
